--- a/1220Report_Markov.Rmd
+++ b/1220Report_Markov.Rmd
@@ -58,15 +58,11 @@ cat(c("\\begin{table}[!htb]
 
 \newpage
 # Part I. General population (without CVD)
-```{r echo=FALSE}
-
-```
 
 ## Markov model
 ```{r, results='asis', message=FALSE}
 library(readr)
 rate_data <- read_csv("data/ghdx_data.csv")
-# male
 print(xtable(data.frame(rate_data),digits=c(0,0,0,6,6,6),
       caption = "Data from Global Health Data Exchange"),
       caption.placement="top")
@@ -75,7 +71,7 @@ print(xtable(data.frame(rate_data),digits=c(0,0,0,6,6,6),
 ```{r}
 ## General setup
 source("./function/transform_func.R")
-rate_data <- rate_data[1:7,]
+# rate_data <- rate_data[1:7,]
 n_t <- 10   # time horizon, number of cycles
 # S1: live; S2: cvd; S3: cvdth; S4: oth_death
 v_names_states <- c("S1", "S2", "S3", "S4")  
@@ -95,15 +91,14 @@ HR_cvdhistory_cvd <-	1.37
 HR_cvdhistory_cvdth <- 3.12
 HR_high_live_cvdth <-	1.17
 
-p_live_oth_death <- rate_to_prob(r=rate_data$rate_death_nonCVD,t = 1)
-p_live_cvd <- rate_to_prob(r=rate_data$rate_incidence_CVD, t=1)
-p_live_cvdth <- rate_to_prob(r=rate_data$rate_death_CVD, t=1)
+p_live_oth_death <- rate_to_prob(r=rate_data$death_nonCVD,t = 1)
+p_live_cvd <- rate_to_prob(r=rate_data$incidence, t=1)
+p_live_cvdth <- rate_to_prob(r=rate_data$death_CVD, t=1)
 # transition probability from S2 to S3
-p_ccvd_acvd <- rate_to_prob(rate_data$rate_incidence_CVD*HR_cvdhistory_cvd, t=1)
-p_ccvd_cvdth <- rate_to_prob(rate_data$rate_death_CVD*HR_cvdhistory_cvdth,t=1)
+p_ccvd_acvd <- rate_to_prob(rate_data$incidence*HR_cvdhistory_cvd, t=1)
+p_ccvd_cvdth <- rate_to_prob(rate_data$death_CVD*HR_cvdhistory_cvdth,t=1)
 set.seed(100)
 p_acvd_cvdth <- rep(runif(1,min=0.02,max=0.1),length=length(p_live_cvd))
-
 ```
 
 ### Component 1: A transition probability matrix $P_t$
@@ -146,77 +141,51 @@ In what follows, an example for the groups of male patients, aging from 40 to 45
 #### Create transition arrays ####
 a_P <- array(0, dim      = c(n_states, n_states, 10),
                 dimnames = list(v_names_states, v_names_states, 1:10))
-## From S1
+## From S1, S2, S3, S4
 a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd[1]*(1-p_acvd_cvdth[1]) +
                                p_live_cvdth[1]*p_live_cvd[1]*p_acvd_cvdth[1] +
                                p_live_oth_death[1])
 a_P["S1", "S2", 1:5]  <- p_live_cvd[1]*(1-p_acvd_cvdth[1])
 a_P["S1", "S3", 1:5]   <- p_live_cvdth[1]*p_live_cvd[1]*p_acvd_cvdth[1]
 a_P["S1", "S4", 1:5]   <- p_live_oth_death[1]
-## From S2
 a_P["S2", "S1", 1:5] <- 0
 a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[1]-
   (p_ccvd_cvdth[1]+p_ccvd_acvd[1]*p_acvd_cvdth[1])
 a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[1]+
   p_ccvd_acvd[1]*p_acvd_cvdth[1]
 a_P["S2", "S4", 1:5] <- p_live_oth_death[1]
-## From S3
 a_P["S3", "S3", 1:5] <- 1
-## From S4
 a_P["S4", "S4", 1:5] <- 1
 
-# From S1
+## From S1, S2, S3, S4
 a_P["S1", "S1", 6:10] <-  1-(p_live_cvd[1+1]*(1-p_acvd_cvdth[1+1])+
                                p_live_cvdth[1+1]*p_live_cvd[1+1]*p_acvd_cvdth[1+1] +
                                p_live_oth_death[1+1])
 a_P["S1", "S2", 6:10]  <- p_live_cvd[1+1]*(1-p_acvd_cvdth[1+1])
 a_P["S1", "S3", 6:10]  <- p_live_cvdth[1+1]*p_live_cvd[1+1]*p_acvd_cvdth[1+1]
 a_P["S1", "S4", 6:10]  <- p_live_oth_death[1+1]
-## From S2
 a_P["S2", "S1", 6:10] <- 0
 a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[1+1]-
   (p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1])
 a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1]
 a_P["S2", "S4", 6:10] <-  p_live_oth_death[1+1]
-## From S3
 a_P["S3", "S3", 6:10] <- 1
-## From S4
 a_P["S4", "S4", 6:10] <- 1
-# the a_P is the transition for 10 cycles
 a_P
 ```
 
-### Component 2: A  cohort trace matrix $M$
+### Component 2: The  cohort trace matrix $M$
 ```{r fig.cap="For the group male aging from 40-45",fig.height=3.5}
-#### Run Markov model ####
-## Initial state vector
-# All starting healthy
+## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
-
-## Initialize cohort trace for cSTM 
-m_M <- matrix(0,nrow     = (n_t + 1), ncol = n_states, 
-              dimnames = list(0:n_t, v_names_states))
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
 m_M[1, ] <- v_s_init
-
-## Iterative solution of cSTM
-for(t in 1:5){
-  ## Fill in cohort trace
+for(t in 1:9){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-rowSums(m_M)
-
-for(t in 6:10){
-  ## Fill in cohort trace
-  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
-}
-rowSums(m_M)
 m_M
-
-```
-
-
-```{r fig.cap="For the group male aging from 40-45",fig.height=3.5}
-plot_trace(m_M)
 ```
 
 \newpage
@@ -273,28 +242,23 @@ Medication & Statin and antihypertensive & `r HR_hpt_lip_cvd` &  `r HR_hpt_lip_c
 \end{table}
 \end{center}
 
+## Calculation of the QALY under the Strategy 1 
 
+### An example for a male patient aged 40-45 years old under low level after screening 
 ```{r}
-## For strategy 1 
-## 7 transition probabilities by some parameters
-# transition probability to cvd
 p_live_cvd_l <- ProbFactor(p_live_cvd,HR_l_stg1)
 p_live_cvd_m <- ProbFactor(p_live_cvd,HR_m_stg1*
-                             # lifestyle intervention
-                             HR_smk_cvd*HR_salt_cvd*HR_wtc_cvd) 
-p_live_cvd_h <- ProbFactor(p_live_cvd,HR_h_stg1* 
-                             # lifestyle intervention
-                             HR_smk_cvdth*HR_salt_cvdth*HR_wtc_dth*   
+                             HR_smk_cvd*HR_salt_cvd*HR_wtc_cvd)  # lifestyle intervention
+p_live_cvd_h <- ProbFactor(p_live_cvd,HR_h_stg1*
+                             HR_smk_cvdth*HR_salt_cvdth*HR_wtc_dth*    # lifestyle intervention
                              HR_hpt_lip_cvdth)   # treatment intervention 
 
 # transition probability to death
 p_live_cvdth_l <- ProbFactor(p_live_cvdth,1)    # equal
 p_live_cvdth_m <- ProbFactor(p_live_cvdth,1*
-                               # lifestyle intervention
-                               HR_smk_cvd*HR_salt_cvd*HR_wtc_cvd)   
+                               HR_smk_cvd*HR_salt_cvd*HR_wtc_cvd)  # lifestyle intervention 
 p_live_cvdth_h <- ProbFactor(p_live_cvdth,1.7*
-                               # lifestyle intervention
-                               HR_smk_cvdth*HR_salt_cvdth*HR_wtc_dth* 
+                               HR_smk_cvdth*HR_salt_cvdth*HR_wtc_dth* # lifestyle intervention
                                HR_hpt_lip_cvdth) # treatment intervention 
 # again get cvd 
 p_ccvd_acvd <- ProbFactor(p_live_cvd,HR_cvdhistory_cvd) 
@@ -320,16 +284,708 @@ $P6= 1-(p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth)-p\_live\_oth\_death$
 
 $P5= p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth$
 
-We say that the screening strategy will have an influence on the first line of the transition matrix.
+\textcolor{red}{We say that the screening strategy will have an influence on the first line of the transition matrix.}
 
 
+```{r}
+###################### Construct state-transition models for Strategy1 #####################
+#### Create transition arrays ####
+a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd_l[1]*(1-p_acvd_cvdth[1]) +
+                               p_live_cvdth_l[1]*p_live_cvd_l[1]*p_acvd_cvdth[1] +
+                               p_live_oth_death[1])
+
+a_P["S1", "S2", 1:5]  <- p_live_cvd_l[1]*(1-p_acvd_cvdth[1])
+a_P["S1", "S3", 1:5]   <- p_live_cvdth_l[1]*p_live_cvd_l[1]*p_acvd_cvdth[1]
+a_P["S1", "S4", 1:5]   <- p_live_oth_death[1]
+a_P["S2", "S1", 1:5] <- 0
+a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[1]-
+  (p_ccvd_cvdth[1]+p_ccvd_acvd[1]*p_acvd_cvdth[1])
+a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[1]+
+  p_ccvd_acvd[1]*p_acvd_cvdth[1]
+a_P["S2", "S4", 1:5] <- p_live_oth_death[1]
+a_P["S3", "S3", 1:5] <- 1
+a_P["S4", "S4", 1:5] <- 1
+
+## From S1, S2, S3, S4
+a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_l[1+1]*(1-p_acvd_cvdth[1+1])+
+                               p_live_cvdth_l[1+1]*p_live_cvd_l[1+1]*p_acvd_cvdth[1+1] +
+                               p_live_oth_death[1+1])
+a_P["S1", "S2", 6:10]  <- p_live_cvd_l[1+1]*(1-p_acvd_cvdth[1+1])
+a_P["S1", "S3", 6:10]  <- p_live_cvdth_l[1+1]*p_live_cvd_l[1+1]*p_acvd_cvdth[1+1]
+a_P["S1", "S4", 6:10]  <- p_live_oth_death[1+1]
+a_P["S2", "S1", 6:10] <- 0
+a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[1+1]-
+  (p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1])
+a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1]
+a_P["S2", "S4", 6:10] <-  p_live_oth_death[1+1]
+a_P["S3", "S3", 6:10] <- 1
+a_P["S4", "S4", 6:10] <- 1
+a_P
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+m_M
+```
 
 ```{r}
 # calculation of the QALY
 mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
 mat[1:nrow(m_M),] <- uti_values
+QALY_l <- sum(m_M*mat)  # is the calculated QALY for the assumed patient under low level
 print(m_M*mat)
-sum(m_M*mat)
+
 ```
 
+
+```{r echo=FALSE}
+###################### Construct state-transition models for Strategy1 #####################
+#### Create transition arrays ####
+a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd_m[1]*(1-p_acvd_cvdth[1]) +
+                               p_live_cvdth_m[1]*p_live_cvd_m[1]*p_acvd_cvdth[1] +
+                               p_live_oth_death[1])
+
+a_P["S1", "S2", 1:5]  <- p_live_cvd_m[1]*(1-p_acvd_cvdth[1])
+a_P["S1", "S3", 1:5]   <- p_live_cvdth_m[1]*p_live_cvd_m[1]*p_acvd_cvdth[1]
+a_P["S1", "S4", 1:5]   <- p_live_oth_death[1]
+a_P["S2", "S1", 1:5] <- 0
+a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[1]-
+  (p_ccvd_cvdth[1]+p_ccvd_acvd[1]*p_acvd_cvdth[1])
+a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[1]+
+  p_ccvd_acvd[1]*p_acvd_cvdth[1]
+a_P["S2", "S4", 1:5] <- p_live_oth_death[1]
+a_P["S3", "S3", 1:5] <- 1
+a_P["S4", "S4", 1:5] <- 1
+
+## From S1, S2, S3, S4
+a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_m[1+1]*(1-p_acvd_cvdth[1+1])+
+                               p_live_cvdth_m[1+1]*p_live_cvd_m[1+1]*p_acvd_cvdth[1+1] +
+                               p_live_oth_death[1+1])
+a_P["S1", "S2", 6:10]  <- p_live_cvd_m[1+1]*(1-p_acvd_cvdth[1+1])
+a_P["S1", "S3", 6:10]  <- p_live_cvdth_m[1+1]*p_live_cvd_m[1+1]*p_acvd_cvdth[1+1]
+a_P["S1", "S4", 6:10]  <- p_live_oth_death[1+1]
+a_P["S2", "S1", 6:10] <- 0
+a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[1+1]-
+  (p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1])
+a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1]
+a_P["S2", "S4", 6:10] <-  p_live_oth_death[1+1]
+a_P["S3", "S3", 6:10] <- 1
+a_P["S4", "S4", 6:10] <- 1
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+```
+
+```{r echo=FALSE}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_m <- sum(m_M*mat)  # is the calculated QALY for the assumed patient under medium level
+```
+
+
+```{r echo=FALSE}
+###################### Construct state-transition models for Strategy1 #####################
+#### Create transition arrays ####
+a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd_h[1]*(1-p_acvd_cvdth[1]) +
+                               p_live_cvdth_h[1]*p_live_cvd_h[1]*p_acvd_cvdth[1] +
+                               p_live_oth_death[1])
+
+a_P["S1", "S2", 1:5]  <- p_live_cvd_h[1]*(1-p_acvd_cvdth[1])
+a_P["S1", "S3", 1:5]   <- p_live_cvdth_h[1]*p_live_cvd_h[1]*p_acvd_cvdth[1]
+a_P["S1", "S4", 1:5]   <- p_live_oth_death[1]
+a_P["S2", "S1", 1:5] <- 0
+a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[1]-
+  (p_ccvd_cvdth[1]+p_ccvd_acvd[1]*p_acvd_cvdth[1])
+a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[1]+
+  p_ccvd_acvd[1]*p_acvd_cvdth[1]
+a_P["S2", "S4", 1:5] <- p_live_oth_death[1]
+a_P["S3", "S3", 1:5] <- 1
+a_P["S4", "S4", 1:5] <- 1
+
+## From S1, S2, S3, S4
+a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_h[1+1]*(1-p_acvd_cvdth[1+1])+
+                               p_live_cvdth_h[1+1]*p_live_cvd_h[1+1]*p_acvd_cvdth[1+1] +
+                               p_live_oth_death[1+1])
+a_P["S1", "S2", 6:10]  <- p_live_cvd_h[1+1]*(1-p_acvd_cvdth[1+1])
+a_P["S1", "S3", 6:10]  <- p_live_cvdth_h[1+1]*p_live_cvd_h[1+1]*p_acvd_cvdth[1+1]
+a_P["S1", "S4", 6:10]  <- p_live_oth_death[1+1]
+a_P["S2", "S1", 6:10] <- 0
+a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[1+1]-
+  (p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1])
+a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1]
+a_P["S2", "S4", 6:10] <-  p_live_oth_death[1+1]
+a_P["S3", "S3", 6:10] <- 1
+a_P["S4", "S4", 6:10] <- 1
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+```
+
+```{r echo=FALSE}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_h <- sum(m_M*mat)  # is the calculated QALY for the assumed patient under high level
+```
+
+
+\begin{table}[htbp]
+\centering
+ \caption{QALY for the calculation of utility values (a male patient aged 40-45)}
+\begin{tabular}{ cc } 
+\hline
+Stratification & QALY \\
+\hline
+Low risk & `r QALY_l`\\
+Medium risk & `r QALY_m`\\
+High risk & `r QALY_h`\\
+\hline
+\end{tabular}
+\end{table}
+
+\newpage
+
+# Health utilities of Strategy1 
+
+To calculate the require QALY for both male and female patients under different ages, construct a vactor to and run a loop save the calculated result 
+```{r}
+QALY_h <- matrix(NA,nrow=14,ncol=1)
+# i specify the group of male patients (age)
+for(i in 1:6){
+  a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd_h[i]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth_h[i]*p_live_cvd_h[i]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+
+a_P["S1", "S2", 1:5]  <- p_live_cvd_h[i]*(1-p_acvd_cvdth[i])
+a_P["S1", "S3", 1:5]   <- p_live_cvdth_h[i]*p_live_cvd_h[i]*p_acvd_cvdth[i]
+a_P["S1", "S4", 1:5]   <- p_live_oth_death[i]
+a_P["S2", "S1", 1:5] <- 0
+a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[i]-
+  (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[i]+
+  p_ccvd_acvd[i]*p_acvd_cvdth[i]
+a_P["S2", "S4", 1:5] <- p_live_oth_death[i]
+a_P["S3", "S3", 1:5] <- 1
+a_P["S4", "S4", 1:5] <- 1
+
+## From S1, S2, S3, S4
+a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_h[i+1]*(1-p_acvd_cvdth[i+1])+
+                               p_live_cvdth_h[i+1]*p_live_cvd_h[i+1]*p_acvd_cvdth[i+1] +
+                               p_live_oth_death[i+1])
+a_P["S1", "S2", 6:10]  <- p_live_cvd_h[i+1]*(1-p_acvd_cvdth[i+1])
+a_P["S1", "S3", 6:10]  <- p_live_cvdth_h[i+1]*p_live_cvd_h[i+1]*p_acvd_cvdth[i+1]
+a_P["S1", "S4", 6:10]  <- p_live_oth_death[i+1]
+a_P["S2", "S1", 6:10] <- 0
+a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[i+1]-
+  (p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1])
+a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1]
+a_P["S2", "S4", 6:10] <-  p_live_oth_death[i+1]
+a_P["S3", "S3", 6:10] <- 1
+a_P["S4", "S4", 6:10] <- 1
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_h[i] <- sum(m_M*mat)
+}
+
+# the group of the male patients aged 70-75
+a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:10]   <- 1-(p_live_cvd_h[7]*(1-p_acvd_cvdth[7]) +
+                               p_live_cvdth_h[7]*p_live_cvd_h[7]*p_acvd_cvdth[7] +
+                               p_live_oth_death[7])
+
+a_P["S1", "S2", 1:10]  <- p_live_cvd_h[7]*(1-p_acvd_cvdth[7])
+a_P["S1", "S3", 1:10]   <- p_live_cvdth_h[7]*p_live_cvd_h[7]*p_acvd_cvdth[7]
+a_P["S1", "S4", 1:10]   <- p_live_oth_death[7]
+a_P["S2", "S1", 1:10] <- 0
+a_P["S2", "S2", 1:10] <- 1-p_live_oth_death[7]-
+  (p_ccvd_cvdth[7]+p_ccvd_acvd[7]*p_acvd_cvdth[7])
+a_P["S2", "S3", 1:10] <- p_ccvd_cvdth[7]+
+  p_ccvd_acvd[7]*p_acvd_cvdth[7]
+a_P["S2", "S4", 1:10] <- p_live_oth_death[7]
+a_P["S3", "S3", 1:10] <- 1
+a_P["S4", "S4", 1:10] <- 1
+
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_h[7] <- sum(m_M*mat)
+#-----------------------------------------------------------------------------------
+# i specify the group of female patients (age)
+for(i in 8:13){  
+  a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd_h[i]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth_h[i]*p_live_cvd_h[i]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+
+a_P["S1", "S2", 1:5]  <- p_live_cvd_h[i]*(1-p_acvd_cvdth[i])
+a_P["S1", "S3", 1:5]   <- p_live_cvdth_h[i]*p_live_cvd_h[i]*p_acvd_cvdth[i]
+a_P["S1", "S4", 1:5]   <- p_live_oth_death[i]
+a_P["S2", "S1", 1:5] <- 0
+a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[i]-
+  (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[i]+
+  p_ccvd_acvd[i]*p_acvd_cvdth[i]
+a_P["S2", "S4", 1:5] <- p_live_oth_death[i]
+a_P["S3", "S3", 1:5] <- 1
+a_P["S4", "S4", 1:5] <- 1
+
+## From S1, S2, S3, S4
+a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_h[i+1]*(1-p_acvd_cvdth[i+1])+
+                               p_live_cvdth_h[i+1]*p_live_cvd_h[i+1]*p_acvd_cvdth[i+1] +
+                               p_live_oth_death[i+1])
+a_P["S1", "S2", 6:10]  <- p_live_cvd_h[i+1]*(1-p_acvd_cvdth[i+1])
+a_P["S1", "S3", 6:10]  <- p_live_cvdth_h[i+1]*p_live_cvd_h[i+1]*p_acvd_cvdth[i+1]
+a_P["S1", "S4", 6:10]  <- p_live_oth_death[i+1]
+a_P["S2", "S1", 6:10] <- 0
+a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[i+1]-
+  (p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1])
+a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1]
+a_P["S2", "S4", 6:10] <-  p_live_oth_death[i+1]
+a_P["S3", "S3", 6:10] <- 1
+a_P["S4", "S4", 6:10] <- 1
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_h[i] <- sum(m_M*mat)
+}
+
+a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+a_P["S1", "S1", 1:10]   <- 1-(p_live_cvd_h[7]*(1-p_acvd_cvdth[7]) +
+                               p_live_cvdth_h[7]*p_live_cvd_h[7]*p_acvd_cvdth[7] +
+                               p_live_oth_death[7])
+
+a_P["S1", "S2", 1:10]  <- p_live_cvd_h[7]*(1-p_acvd_cvdth[7])
+a_P["S1", "S3", 1:10]   <- p_live_cvdth_h[7]*p_live_cvd_h[7]*p_acvd_cvdth[7]
+a_P["S1", "S4", 1:10]   <- p_live_oth_death[7]
+a_P["S2", "S1", 1:10] <- 0
+a_P["S2", "S2", 1:10] <- 1-p_live_oth_death[7]-
+  (p_ccvd_cvdth[7]+p_ccvd_acvd[7]*p_acvd_cvdth[7])
+a_P["S2", "S3", 1:10] <- p_ccvd_cvdth[7]+
+  p_ccvd_acvd[7]*p_acvd_cvdth[7]
+a_P["S2", "S4", 1:10] <- p_live_oth_death[7]
+a_P["S3", "S3", 1:10] <- 1
+a_P["S4", "S4", 1:10] <- 1
+
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_h[14] <- sum(m_M*mat)
+```
+
+```{r}
+QALY_m <- matrix(NA,nrow=14,ncol=1)
+# i specify the group of male patients (age)
+for(i in 1:6){
+  a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd_m[i]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth_m[i]*p_live_cvd_m[i]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+
+a_P["S1", "S2", 1:5]  <- p_live_cvd_m[i]*(1-p_acvd_cvdth[i])
+a_P["S1", "S3", 1:5]   <- p_live_cvdth_m[i]*p_live_cvd_m[i]*p_acvd_cvdth[i]
+a_P["S1", "S4", 1:5]   <- p_live_oth_death[i]
+a_P["S2", "S1", 1:5] <- 0
+a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[i]-
+  (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[i]+
+  p_ccvd_acvd[i]*p_acvd_cvdth[i]
+a_P["S2", "S4", 1:5] <- p_live_oth_death[i]
+a_P["S3", "S3", 1:5] <- 1
+a_P["S4", "S4", 1:5] <- 1
+
+## From S1, S2, S3, S4
+a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_m[i+1]*(1-p_acvd_cvdth[i+1])+
+                               p_live_cvdth_m[i+1]*p_live_cvd_m[i+1]*p_acvd_cvdth[i+1] +
+                               p_live_oth_death[i+1])
+a_P["S1", "S2", 6:10]  <- p_live_cvd_m[i+1]*(1-p_acvd_cvdth[i+1])
+a_P["S1", "S3", 6:10]  <- p_live_cvdth_m[i+1]*p_live_cvd_m[i+1]*p_acvd_cvdth[i+1]
+a_P["S1", "S4", 6:10]  <- p_live_oth_death[i+1]
+a_P["S2", "S1", 6:10] <- 0
+a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[i+1]-
+  (p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1])
+a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1]
+a_P["S2", "S4", 6:10] <-  p_live_oth_death[i+1]
+a_P["S3", "S3", 6:10] <- 1
+a_P["S4", "S4", 6:10] <- 1
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_m[i] <- sum(m_M*mat)
+}
+
+# the group of the male patients aged 70-75
+a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:10]   <- 1-(p_live_cvd_m[7]*(1-p_acvd_cvdth[7]) +
+                               p_live_cvdth_m[7]*p_live_cvd_m[7]*p_acvd_cvdth[7] +
+                               p_live_oth_death[7])
+
+a_P["S1", "S2", 1:10]  <- p_live_cvd_m[7]*(1-p_acvd_cvdth[7])
+a_P["S1", "S3", 1:10]   <- p_live_cvdth_m[7]*p_live_cvd_m[7]*p_acvd_cvdth[7]
+a_P["S1", "S4", 1:10]   <- p_live_oth_death[7]
+a_P["S2", "S1", 1:10] <- 0
+a_P["S2", "S2", 1:10] <- 1-p_live_oth_death[7]-
+  (p_ccvd_cvdth[7]+p_ccvd_acvd[7]*p_acvd_cvdth[7])
+a_P["S2", "S3", 1:10] <- p_ccvd_cvdth[7]+
+  p_ccvd_acvd[7]*p_acvd_cvdth[7]
+a_P["S2", "S4", 1:10] <- p_live_oth_death[7]
+a_P["S3", "S3", 1:10] <- 1
+a_P["S4", "S4", 1:10] <- 1
+
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_m[7] <- sum(m_M*mat)
+#-----------------------------------------------------------------------------------
+# i specify the group of female patients (age)
+for(i in 8:13){  
+  a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd_m[i]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth_m[i]*p_live_cvd_m[i]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+
+a_P["S1", "S2", 1:5]  <- p_live_cvd_m[i]*(1-p_acvd_cvdth[i])
+a_P["S1", "S3", 1:5]   <- p_live_cvdth_m[i]*p_live_cvd_m[i]*p_acvd_cvdth[i]
+a_P["S1", "S4", 1:5]   <- p_live_oth_death[i]
+a_P["S2", "S1", 1:5] <- 0
+a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[i]-
+  (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[i]+
+  p_ccvd_acvd[i]*p_acvd_cvdth[i]
+a_P["S2", "S4", 1:5] <- p_live_oth_death[i]
+a_P["S3", "S3", 1:5] <- 1
+a_P["S4", "S4", 1:5] <- 1
+
+## From S1, S2, S3, S4
+a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_m[i+1]*(1-p_acvd_cvdth[i+1])+
+                               p_live_cvdth_m[i+1]*p_live_cvd_m[i+1]*p_acvd_cvdth[i+1] +
+                               p_live_oth_death[i+1])
+a_P["S1", "S2", 6:10]  <- p_live_cvd_m[i+1]*(1-p_acvd_cvdth[i+1])
+a_P["S1", "S3", 6:10]  <- p_live_cvdth_m[i+1]*p_live_cvd_m[i+1]*p_acvd_cvdth[i+1]
+a_P["S1", "S4", 6:10]  <- p_live_oth_death[i+1]
+a_P["S2", "S1", 6:10] <- 0
+a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[i+1]-
+  (p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1])
+a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1]
+a_P["S2", "S4", 6:10] <-  p_live_oth_death[i+1]
+a_P["S3", "S3", 6:10] <- 1
+a_P["S4", "S4", 6:10] <- 1
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_m[i] <- sum(m_M*mat)
+}
+
+a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+a_P["S1", "S1", 1:10]   <- 1-(p_live_cvd_m[7]*(1-p_acvd_cvdth[7]) +
+                               p_live_cvdth_m[7]*p_live_cvd_m[7]*p_acvd_cvdth[7] +
+                               p_live_oth_death[7])
+
+a_P["S1", "S2", 1:10]  <- p_live_cvd_m[7]*(1-p_acvd_cvdth[7])
+a_P["S1", "S3", 1:10]   <- p_live_cvdth_m[7]*p_live_cvd_m[7]*p_acvd_cvdth[7]
+a_P["S1", "S4", 1:10]   <- p_live_oth_death[7]
+a_P["S2", "S1", 1:10] <- 0
+a_P["S2", "S2", 1:10] <- 1-p_live_oth_death[7]-
+  (p_ccvd_cvdth[7]+p_ccvd_acvd[7]*p_acvd_cvdth[7])
+a_P["S2", "S3", 1:10] <- p_ccvd_cvdth[7]+
+  p_ccvd_acvd[7]*p_acvd_cvdth[7]
+a_P["S2", "S4", 1:10] <- p_live_oth_death[7]
+a_P["S3", "S3", 1:10] <- 1
+a_P["S4", "S4", 1:10] <- 1
+
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_m[14] <- sum(m_M*mat)
+```
+
+```{r}
+QALY_l <- matrix(NA,nrow=14,ncol=1)
+# i specify the group of male patients (age)
+for(i in 1:6){
+  a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd_l[i]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth_l[i]*p_live_cvd_l[i]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+
+a_P["S1", "S2", 1:5]  <- p_live_cvd_l[i]*(1-p_acvd_cvdth[i])
+a_P["S1", "S3", 1:5]   <- p_live_cvdth_l[i]*p_live_cvd_l[i]*p_acvd_cvdth[i]
+a_P["S1", "S4", 1:5]   <- p_live_oth_death[i]
+a_P["S2", "S1", 1:5] <- 0
+a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[i]-
+  (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[i]+
+  p_ccvd_acvd[i]*p_acvd_cvdth[i]
+a_P["S2", "S4", 1:5] <- p_live_oth_death[i]
+a_P["S3", "S3", 1:5] <- 1
+a_P["S4", "S4", 1:5] <- 1
+
+## From S1, S2, S3, S4
+a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_l[i+1]*(1-p_acvd_cvdth[i+1])+
+                               p_live_cvdth_l[i+1]*p_live_cvd_l[i+1]*p_acvd_cvdth[i+1] +
+                               p_live_oth_death[i+1])
+a_P["S1", "S2", 6:10]  <- p_live_cvd_l[i+1]*(1-p_acvd_cvdth[i+1])
+a_P["S1", "S3", 6:10]  <- p_live_cvdth_l[i+1]*p_live_cvd_l[i+1]*p_acvd_cvdth[i+1]
+a_P["S1", "S4", 6:10]  <- p_live_oth_death[i+1]
+a_P["S2", "S1", 6:10] <- 0
+a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[i+1]-
+  (p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1])
+a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1]
+a_P["S2", "S4", 6:10] <-  p_live_oth_death[i+1]
+a_P["S3", "S3", 6:10] <- 1
+a_P["S4", "S4", 6:10] <- 1
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_l[i] <- sum(m_M*mat)
+}
+
+# the group of the male patients aged 70-75
+a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:10]   <- 1-(p_live_cvd_l[7]*(1-p_acvd_cvdth[7]) +
+                               p_live_cvdth_l[7]*p_live_cvd_l[7]*p_acvd_cvdth[7] +
+                               p_live_oth_death[7])
+
+a_P["S1", "S2", 1:10]  <- p_live_cvd_l[7]*(1-p_acvd_cvdth[7])
+a_P["S1", "S3", 1:10]   <- p_live_cvdth_l[7]*p_live_cvd_l[7]*p_acvd_cvdth[7]
+a_P["S1", "S4", 1:10]   <- p_live_oth_death[7]
+a_P["S2", "S1", 1:10] <- 0
+a_P["S2", "S2", 1:10] <- 1-p_live_oth_death[7]-
+  (p_ccvd_cvdth[7]+p_ccvd_acvd[7]*p_acvd_cvdth[7])
+a_P["S2", "S3", 1:10] <- p_ccvd_cvdth[7]+
+  p_ccvd_acvd[7]*p_acvd_cvdth[7]
+a_P["S2", "S4", 1:10] <- p_live_oth_death[7]
+a_P["S3", "S3", 1:10] <- 1
+a_P["S4", "S4", 1:10] <- 1
+
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_l[7] <- sum(m_M*mat)
+#-----------------------------------------------------------------------------------
+# i specify the group of female patients (age)
+for(i in 8:13){  
+  a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+## From S1, S2, S3, S4
+a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd_l[i]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth_l[i]*p_live_cvd_l[i]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+
+a_P["S1", "S2", 1:5]  <- p_live_cvd_l[i]*(1-p_acvd_cvdth[i])
+a_P["S1", "S3", 1:5]   <- p_live_cvdth_l[i]*p_live_cvd_l[i]*p_acvd_cvdth[i]
+a_P["S1", "S4", 1:5]   <- p_live_oth_death[i]
+a_P["S2", "S1", 1:5] <- 0
+a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[i]-
+  (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[i]+
+  p_ccvd_acvd[i]*p_acvd_cvdth[i]
+a_P["S2", "S4", 1:5] <- p_live_oth_death[i]
+a_P["S3", "S3", 1:5] <- 1
+a_P["S4", "S4", 1:5] <- 1
+
+## From S1, S2, S3, S4
+a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_l[i+1]*(1-p_acvd_cvdth[i+1])+
+                               p_live_cvdth_l[i+1]*p_live_cvd_l[i+1]*p_acvd_cvdth[i+1] +
+                               p_live_oth_death[i+1])
+a_P["S1", "S2", 6:10]  <- p_live_cvd_l[i+1]*(1-p_acvd_cvdth[i+1])
+a_P["S1", "S3", 6:10]  <- p_live_cvdth_l[i+1]*p_live_cvd_l[i+1]*p_acvd_cvdth[i+1]
+a_P["S1", "S4", 6:10]  <- p_live_oth_death[i+1]
+a_P["S2", "S1", 6:10] <- 0
+a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[i+1]-
+  (p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1])
+a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1]
+a_P["S2", "S4", 6:10] <-  p_live_oth_death[i+1]
+a_P["S3", "S3", 6:10] <- 1
+a_P["S4", "S4", 6:10] <- 1
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_l[i] <- sum(m_M*mat)
+}
+
+a_P <- array(0, dim      = c(n_states, n_states, 10),
+                dimnames = list(v_names_states, v_names_states, 1:10))
+a_P["S1", "S1", 1:10]   <- 1-(p_live_cvd_l[7]*(1-p_acvd_cvdth[7]) +
+                               p_live_cvdth_l[7]*p_live_cvd_l[7]*p_acvd_cvdth[7] +
+                               p_live_oth_death[7])
+
+a_P["S1", "S2", 1:10]  <- p_live_cvd_l[7]*(1-p_acvd_cvdth[7])
+a_P["S1", "S3", 1:10]   <- p_live_cvdth_l[7]*p_live_cvd_l[7]*p_acvd_cvdth[7]
+a_P["S1", "S4", 1:10]   <- p_live_oth_death[7]
+a_P["S2", "S1", 1:10] <- 0
+a_P["S2", "S2", 1:10] <- 1-p_live_oth_death[7]-
+  (p_ccvd_cvdth[7]+p_ccvd_acvd[7]*p_acvd_cvdth[7])
+a_P["S2", "S3", 1:10] <- p_ccvd_cvdth[7]+
+  p_ccvd_acvd[7]*p_acvd_cvdth[7]
+a_P["S2", "S4", 1:10] <- p_live_oth_death[7]
+a_P["S3", "S3", 1:10] <- 1
+a_P["S4", "S4", 1:10] <- 1
+
+## Initial state vector: All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+## Initialize cohort trace for Markov model 
+m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+              dimnames = list(0:(n_t-1), v_names_states))
+m_M[1, ] <- v_s_init
+for(t in 1:9){
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
+}
+# calculation of the QALY
+mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
+mat[1:nrow(m_M),] <- uti_values
+QALY_l[14] <- sum(m_M*mat)
+```
+
+
+```{r results='asis', message=FALSE}
+print(xtable(data.frame(cbind(rate_data,QALY_h,QALY_m,QALY_l)),digits=c(0,0,0,6,6,6,4,4,4),
+      caption = "QALY under the screening of Strategy 1"),
+      caption.placement="top")
+```
 
